@@ -167,5 +167,5 @@ extern struct dir rootParent;
 extern void afp_over_asp (AFPObj *);
 #endif /* NO_DDP */
 extern void afp_over_dsi (AFPObj *);
-
+extern void afp_over_dsi_sighandlers(AFPObj *obj);
 #endif /* globals.h */
