@@ -3,6 +3,9 @@ Changes in 2.2.4
 
 * FIX: Missing UAM links
 * FIX: Lockup in AFP logout on Fedora 17
+* FIX: Reset signal handlers and alarm timer after successfull PAM
+       authentication. Fixes a problem with AFP disconnects caused
+       by pam_smbpass.so messing with our handlers and timer.
 
 Changes in 2.2.3
 ================
